app/assets/stylesheets/components/new_room_form.scss
.new-room-form-box {
  display: flex;
  flex-direction: row;
}


.new-room-form {
  width: 50%;
  display: flex;
  flex-direction: column;
  width: 75%;
  padding-top: 20px;
  padding-left: 75px;
  padding-right: 75px;
  padding-bottom: 50px;
  input {
    display: block;
    height: 30px;
    padding-left: 10px;
    font-size: 16px;
    vertical-align: middle;
  }
  textarea {
    padding-top: 8px;
    padding-left: 15px;
    height: 50px;
    font-size: 14px;
  }
  .padder{
    height: 10px;
  }
  h2 {
    margin: 0;
    padding-top: 15px;
    padding-bottom: 5px;
    font-weight: bold;
    font-size: 20px;
  }
  h3 {
    margin: 0;
    padding: 0;
    font-size: 15px;
    font-weight: lighter;
    color: grey;
  }
  select {
    height: 30px;
    font-size: 16px;
    appearance: none;
    padding: 10px;
    option {
      align-items: center;
    }
     border-radius: 4px;
  }
  button {
    margin-top: 20px;
    cursor: pointer;
    background: $bnb-pink;
    color: white;
    border: none;
    border-radius: 5px;
    height: 50px;
    font-size: 30px;
  }
  button:hover {
    background: orange;
  }
}
html, body {
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px
}
.map-container {
  position: sticky;
  top: 120px;
  width: 100%;
  height: 100%;

}

.map {
  width: 100%;
  height: 80vh;

}

.img-drop-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  img {
    height: 200px;
    width: 100%;
  }
  button {
    margin-top: 4px;
    cursor: pointer;
    background: $bnb-green;
    color: white;
    border: none;
    border-radius: 4px;
    height: auto;
    font-size: 20px;
  }
  button:hover {
    background: $bnb-green;
    opacity: 0.6;
  }
}

.FileUpload {
  display: inline-block;
  width: 100%;
  justify-content: center;
  .dropzone {
    width : 100%;
    height : 100px;
    border: 1px dashed grey;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    p:hover {
      cursor: pointer;
      text-decoration: underline;
    }
  }
}

.dropzone-default-option {
  z-index: 50000;
}

